[gd_scene load_steps=3 format=3 uid="uid://bdfuoxfyblqtw"]

[ext_resource type="Script" path="res://addons/talo/samples/authentication/scripts/change_password.gd" id="1_36xs1"]
[ext_resource type="Theme" uid="uid://ce2uyi827vc5x" path="res://addons/talo/samples/authentication/assets/theme.tres" id="2_hwmu0"]

[node name="ChangePassword" type="Node2D"]
script = ExtResource("1_36xs1")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 720.0

[node name="Background" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.160784, 0.215686, 1)

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_hwmu0")
text = "Change password"
horizontal_alignment = 1

[node name="CurrentPassword" type="TextEdit" parent="UI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_hwmu0")
placeholder_text = "Current password"

[node name="NewPassword" type="TextEdit" parent="UI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_hwmu0")
placeholder_text = "New password"

[node name="Submit" type="Button" parent="UI/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_hwmu0")
text = "Submit"

[node name="Cancel" type="Button" parent="UI/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_hwmu0")
text = "Cancel"

[node name="ValidationLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4

[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
